# gandalf-the-grader

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/gandalf_grader/: __main__.py  config.py  judge.py  trajectory.py
tests/: test_config.py  test_judge.py  test_orchestrator.py  test_trajectory.py
tests/fixtures/: sample_rubric.json  sample_rubric_with_negatives.json  sample_trajectory.json  sample_verifier.toml
