[project]
name = "gandalf-grader"
version = "0.1.0"
description = "Agent-as-judge grading framework for evaluating AI agent outputs against rubric criteria"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Handshake" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openhands-sdk>=1.11.2",
    "openhands-tools>=1.11.2",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/Handshake-AI-Research/gandalf-the-grader"
Repository = "https://github.com/Handshake-AI-Research/gandalf-the-grader"
Issues = "https://github.com/Handshake-AI-Research/gandalf-the-grader/issues"

[project.scripts]
gandalf-grader = "gandalf_grader.__main__:main"
gandalf-grader-judge = "gandalf_grader.judge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gandalf_grader"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.15.0", "mypy>=1.19.0"]

[tool.ruff]
line-length = 120
lint.select = ["E", "W", "F", "UP", "B", "SIM", "I", "RUF"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["openhands.sdk", "openhands.tools.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
